iRedMail-0.9.9:
    * Improvements:
        + Able to set per-user mailbox format (e.g. mdbox) and mailbox folder
          appended to maildir path in SQL/LDAP.
        + Switch to utf8mb4 as default character set in MySQL.
        + Set file/directory permission to 0400 for dumpped SQL backup files.

    * Fixed issues:
        + Use accurate Nginx url match for Roundcube.
        - mlmmjadmin:
            - Not set correct owner/group for config file.
            - Not use correct syslog socket path on FreeBSD.
        - SQL backends:
            - Not handle alias domains for relay in Postfix.

    * Updated packages:
        + Roundcube -> 1.3.7
        + iRedAdmin -> 0.9.1
        + mlmmjadmin -> 1.5

iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2, 6.3
        + Ubuntu 18.04

    * Dropped distribution releases:
        + RHEL/CentOS 6
        + Ubuntu 14.04 LTS, 17.04
        + Debian 8
        + OpenBSD 6.1

    * Remove components:
        - Apache has been removed, Nginx is the only one web server available.

    * New components:
        + netdata (1.10.0) monitor integration: http://my-netdata.io
          Note: netdata currently works on Linux and FreeBSD, not OpenBSD.

          - Integrate netdata on Linux server:
            https://docs.iredmail.org/integration.netdata.linux.html

          - Integrate netdata on FreeBSD server:
            https://docs.iredmail.org/integration.netdata.freebsd.html

        + Integrate 'mlmmj' mailing list manager, and 'mlmmjadmin' RESTful API
          server for easy mlmmj management.

            - mlmmj: http://mlmmj.org/
            - mlmmjadmin (developed and maintained by iRedMail team):
              https://github.com/iredmail/mlmmjadmin
            - Integrate mlmmj & mlmmjadmin:
                - LDAP backends: https://docs.iredmail.org/integration.mlmmj.ldap.html
                - MySQL/MariaDB backends: https://docs.iredmail.org/integration.mlmmj.mysql.html