@@ -1,0 +1,2 @@
+if $syslogfacility-text == 'PH_OPENLDAP_SYSLOG_FACILITY' and $programname == 'slapd' then -PH_OPENLDAP_LOG_FILE
+& stop
